Voice calling: Add Vapi.ai test setup and gitignore
- Add .gitignore to exclude node_modules and env files
- Add test-call-wife.js example for Japanese conversation testing
- Update voice-calling skill documentation
- Add package-lock.json for dependency tracking

Part of Vapi.ai voice calling agent implementation (2026-02-11)

--- a/skills/voice-calling/.env.example
+++ b/skills/voice-calling/.env.example
@@ -1,18 +1,115 @@
-# Vapi.ai Configuration
+# Vapi.ai Voice Calling Configuration
+# Copy this file to .env and fill in your actual values
+
+# =============================================================================
+# VAPI CREDENTIALS
+# =============================================================================
+# Get these from https://dashboard.vapi.ai/ → Settings → API Keys
 VAPI_API_KEY=your_vapi_api_key_here
+
+# Optional: Vapi Phone Number ID (if using Vapi-provided number)
+# Get from Dashboard → Phone Numbers
 VAPI_PHONE_NUMBER_ID=your_phone_number_id_here
 
-# Webhook Configuration
-WEBHOOK_URL=https://your-server.com/vapi/webhook
-WEBHOOK_SECRET=generate_random_secret_string_here
-WEBHOOK_PORT=3000
+# =============================================================================
+# TWILIO CREDENTIALS (Optional - for better Japan calling)
+# =============================================================================
+# Get these from https://www.twilio.com/console
+# Only needed if you want to import Twilio number to Vapi
+TWILIO_ACCOUNT_SID=your_twilio_account_sid_here
+TWILIO_AUTH_TOKEN=your_twilio_auth_token_here
+TWILIO_PHONE_NUMBER=+1234567890  # Your Twilio number in E.164 format
 
-# Optional: If using your own provider API keys
-ANTHROPIC_API_KEY=
-OPENAI_API_KEY=
-ELEVENLABS_API_KEY=
-DEEPGRAM_API_KEY=
+# =============================================================================
+# TEST CALL CONFIGURATION
+# =============================================================================
+# Your contact information
+MY_PHONE=+818043325584  # David's phone
+WIFE_PHONE=+81XXXXXXXXXX  # Wife's phone (update this!)
 
-# Optional: Twilio (for Japanese phone numbers)
-TWILIO_ACCOUNT_SID=
-TWILIO_AUTH_TOKEN=
+# Test assistant ID (get this after creating assistant in dashboard)
+TEST_ASSISTANT_ID=your_assistant_id_here
+
+# =============================================================================
+# ASSISTANT CONFIGURATION
+# =============================================================================
+# Default voice settings for Japanese
+DEFAULT_VOICE_PROVIDER=azure
+DEFAULT_VOICE_ID=ja-JP-NanamiNeural
+DEFAULT_VOICE_SPEED=1.0
+
+# Default model settings
+DEFAULT_MODEL_PROVIDER=openai
+DEFAULT_MODEL=gpt-4-turbo
+DEFAULT_TEMPERATURE=0.7
+
+# Default transcriber
+DEFAULT_TRANSCRIBER_PROVIDER=deepgram
+DEFAULT_TRANSCRIBER_LANGUAGE=ja  # Japanese
+
+# =============================================================================
+# COST CONTROL
+# =============================================================================
+# Maximum call duration in seconds
+MAX_CALL_DURATION=180  # 3 minutes
+
+# Alert if call costs exceed (in USD)
+COST_ALERT_THRESHOLD=1.00
+
+# =============================================================================
+# JAPANESE LANGUAGE SETTINGS
+# =============================================================================
+# Preferred Japanese voices (in order of preference)
+# Azure options:
+#   - ja-JP-NanamiNeural (Female, Standard)
+#   - ja-JP-KeitaNeural (Male, Standard)
+#   - ja-JP-AoiNeural (Female, Child)
+#   - ja-JP-MayuNeural (Female, Standard)
+#   - ja-JP-NaokiNeural (Male, Standard)
+#   - ja-JP-ShioriNeural (Female, Standard)
+JAPANESE_VOICE_PRIMARY=ja-JP-NanamiNeural
+JAPANESE_VOICE_FALLBACK=ja-JP-KeitaNeural
+
+# Japanese end-of-call phrases
+JAPANESE_END_PHRASES=さようなら,じゃあね,また後で,ありがとう,バイバイ
+
+# =============================================================================
+# DEVELOPMENT / TESTING
+# =============================================================================
+# Set to 'true' to enable additional logging
+DEBUG_MODE=false
+
+# Set to 'true' to use web calling instead of phone (FREE for testing)
+WEB_CALLING_ONLY=false
+
+# Vapi API base URL (shouldn't need to change)
+VAPI_API_URL=https://api.vapi.ai
+
+# =============================================================================
+# WEBHOOK CONFIGURATION (Optional - for advanced usage)
+# =============================================================================
+# If you want to receive call events via webhook
+# WEBHOOK_URL=https://your-server.com/webhook
+# WEBHOOK_SECRET=your_webhook_secret_here
+
+# =============================================================================
+# STORAGE (Optional)
+# =============================================================================
+# Where to save call recordings and transcripts locally
+RECORDINGS_DIR=./recordings
+TRANSCRIPTS_DIR=./transcripts
+
+# =============================================================================
+# NOTES FOR TONIGHT'S TEST
+# =============================================================================
+# 1. Update WIFE_PHONE with actual number
+# 2. After creating assistant in dashboard, add TEST_ASSISTANT_ID
+# 3. For first test, keep WEB_CALLING_ONLY=true, then set to false
+# 4. Check DEBUG_MODE=true if you want verbose logs
+# 5. Cost control: MAX_CALL_DURATION=180 keeps call under 3 minutes
+#
+# Quick start:
+#   1. cp .env.example .env
+#   2. Edit .env with your values
+#   3. node examples/test-call-wife.js (web test first!)
+#   4. Once working, make real call from dashboard
