--- a/skills/voice-calling/package.json
+++ b/skills/voice-calling/package.json
@@ -1,34 +1,28 @@
 {
-  "name": "@openclaw/voice-calling",
+  "name": "voice-calling-skill",
   "version": "1.0.0",
-  "description": "AI-powered phone calling skill for OpenClaw using Vapi.ai",
+  "description": "Vapi.ai voice calling integration for OpenClaw",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js",
-    "test": "jest",
-    "webhook": "node lib/webhook-server.js"
+    "test": "node examples/test-call-wife.js",
+    "test:web": "WEB_CALLING_ONLY=true node examples/test-call-wife.js"
   },
   "keywords": [
-    "openclaw",
-    "skill",
+    "vapi",
     "voice",
     "ai",
-    "phone",
-    "vapi",
     "calling",
-    "japanese"
+    "japanese",
+    "telephony"
   ],
-  "author": "OpenClaw",
+  "author": "David",
   "license": "MIT",
   "dependencies": {
-    "@vapi-ai/server-sdk": "^0.1.0",
-    "express": "^4.18.2",
-    "dotenv": "^16.3.1",
-    "axios": "^1.6.0"
+    "@vapi-ai/server-sdk": "^0.2.0",
+    "dotenv": "^16.0.0"
   },
-  "devDependencies": {
-    "nodemon": "^3.0.1",
-    "jest": "^29.7.0"
+  "devDependencies": {},
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
